# wave-project

./: .gitignore  LICENSE  README.md  pyproject.toml
wave_cli/: __init__.py  __main__.py  cli.py  report_generator.py  report_parser.py  utils.py
wave_cli/scanners/: gobuster_scanner.py  internal_links_scraper.py  subdomain_scanner.py  utils.py
wave_cli/scanners/owasp/: A02_security_headers.py  A04_cryptographic_failures.py
