[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-cli"
version = "0.1.0"
description = "Website Assessment Vulnerability Engine - Multi-tool CLI for web app vulnerability scanning"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
keywords = ["security", "vulnerability", "scanning", "web", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "flake8>=6.0", "mypy>=1.0"]
scanning = ["nmap>=0.0.1", "gobuster>=3.0"]  # À adapter
reporting = ["reportlab>=4.0.0", "weasyprint>=58.0"]

[project.urls]
Repository = "https://github.com/yourusername/wave-cli"
Issues = "https://github.com/yourusername/wave-cli/issues"

[project.scripts]
wave = "wave_cli.cli:cli"

[tool.setuptools]
packages = ["wave_cli"]

[tool.setuptools.package-data]
"wave_cli.wordlists" = ["*.txt"]
